js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/method-heritage-call-expression-this.js
DONOTEVALUATE
(
)
;
class
Parent
{
#
x
=
42
;
}
class
C
extends
Parent
{
m
(
)
{
(
(
)
=
>
this
)
(
)
.
#
x
}
}
